Fix game details list layout error with overflow

--- a/scss/_gamedetails.scss
+++ b/scss/_gamedetails.scss
@@ -52,23 +52,28 @@
 
     &__card {
         background-color: rgba($color: #000000, $alpha: 0.6);
-        padding: 1rem;
+        padding: 2rem;
         border-radius: 2rem;
         box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.5);
 
         &__list {
-            list-style-type: none;
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(4, 1fr);
+            align-items: center;
+            justify-items: center;
+            list-style-type: none;
+            width: 100%;
 
             li {
+                @include flex-display(row, wrap, center, flex-start);
                 width: 95%;
-                padding: 1rem;
                 border-bottom: 1px solid white;
+                overflow: hidden;
 
-                a:hover {
-                    color: $accent-blue;
+                a,
+                span:last-of-type {
+                    padding: 0.5rem 0;
                 }
             }
         }
@@ -77,7 +82,7 @@
     &__gallery {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: max-content;
+        grid-auto-rows: auto;
         gap: 2rem;
 
         &__image {
